// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RacingTaskSolver with "Bayreuth/2018-05-30/Open" can selects correct start point for max distance 1`] = `
Object {
  "completed": false,
  "distance": 2942.4650,
  "path": Array [
    Object {
      "altitude": 1624.0805,
      "coordinate": lon 11.4777705 lat 49.9850326,
      "time": 2018-05-30T11:36:12.080Z,
      "valid": true,
    },
    Object {
      "altitude": 1552,
      "coordinate": lon 11.4380333 lat 49.9743833,
      "time": 2018-05-30T11:37:54.000Z,
      "valid": true,
    },
  ],
  "speed": undefined,
  "time": undefined,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" can handle outlandings 1`] = `
Object {
  "completed": false,
  "distance": 94170.212,
  "path": Array [
    Object {
      "altitude": 1297.1307,
      "coordinate": lon 6.9305874 lat 51.0871759,
      "time": 2017-07-17T14:54:42.515Z,
      "valid": true,
    },
    Object {
      "altitude": 1001.1656,
      "coordinate": lon 6.2812555 lat 50.9890756,
      "time": 2017-07-17T15:42:59.779Z,
      "valid": true,
    },
    Object {
      "altitude": 920.91902,
      "coordinate": lon 6.1937554 lat 51.1722784,
      "time": 2017-07-17T16:21:04.919Z,
      "valid": true,
    },
    Object {
      "altitude": 401,
      "coordinate": lon 6.5761500 lat 51.0575667,
      "time": 2017-07-17T16:55:18.000Z,
      "valid": true,
    },
  ],
  "speed": undefined,
  "time": undefined,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns a result 1`] = `
Object {
  "completed": true,
  "distance": 136145.27,
  "path": Array [
    Object {
      "altitude": 1394.8062,
      "coordinate": lon 6.9313498 lat 51.0847306,
      "time": 2017-07-17T14:50:56.825Z,
      "valid": true,
    },
    Object {
      "altitude": 910,
      "coordinate": lon 6.2829181 lat 50.9964654,
      "time": 2017-07-17T15:24:26.380Z,
      "valid": true,
    },
    Object {
      "altitude": 1097.8064,
      "coordinate": lon 6.1941852 lat 51.1723459,
      "time": 2017-07-17T15:51:51.555Z,
      "valid": true,
    },
    Object {
      "altitude": 1221.1424,
      "coordinate": lon 6.6075025 lat 50.9694879,
      "time": 2017-07-17T16:20:04.143Z,
      "valid": true,
    },
    Object {
      "altitude": 748.40686,
      "coordinate": lon 7.0084235 lat 51.0985126,
      "time": 2017-07-17T16:39:10.837Z,
      "valid": true,
    },
  ],
  "speed": 75.473058,
  "time": 6494.0122,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns an intermediate result 1`] = `
Object {
  "completed": false,
  "distance": 52613.082,
  "path": Array [
    Object {
      "altitude": 1394.8062,
      "coordinate": lon 6.9313498 lat 51.0847306,
      "time": 2017-07-17T14:50:56.825Z,
      "valid": true,
    },
    Object {
      "altitude": 910,
      "coordinate": lon 6.2829181 lat 50.9964654,
      "time": 2017-07-17T15:24:26.380Z,
      "valid": true,
    },
    Object {
      "altitude": 782,
      "coordinate": lon 6.2179833 lat 51.0453833,
      "time": 2017-07-17T15:29:23.000Z,
      "valid": true,
    },
  ],
  "speed": undefined,
  "time": undefined,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns an intermediate result 2`] = `
Object {
  "completed": true,
  "distance": 136145.27,
  "path": Array [
    Object {
      "altitude": 1394.8062,
      "coordinate": lon 6.9313498 lat 51.0847306,
      "time": 2017-07-17T14:50:56.825Z,
      "valid": true,
    },
    Object {
      "altitude": 910,
      "coordinate": lon 6.2829181 lat 50.9964654,
      "time": 2017-07-17T15:24:26.380Z,
      "valid": true,
    },
    Object {
      "altitude": 1097.8064,
      "coordinate": lon 6.1941852 lat 51.1723459,
      "time": 2017-07-17T15:51:51.555Z,
      "valid": true,
    },
    Object {
      "altitude": 1221.1424,
      "coordinate": lon 6.6075025 lat 50.9694879,
      "time": 2017-07-17T16:20:04.143Z,
      "valid": true,
    },
    Object {
      "altitude": 748.40686,
      "coordinate": lon 7.0084235 lat 51.0985126,
      "time": 2017-07-17T16:39:10.837Z,
      "valid": true,
    },
  ],
  "speed": 75.473058,
  "time": 6494.0122,
}
`;
